skiplang/compiler/invalid_tests/typechecking/always_inline_no_inline.sk
@always_inline
@no_inline
fun contradictory(x: Int): Int {
  x + 1
}

untracked fun main(): void {
  print_string("c=" + contradictory(1))
}
